change box shadow color

--- a/src/style/_library.scss
+++ b/src/style/_library.scss
@@ -5,7 +5,7 @@
     width: 20rem;
     height: 100%;
     background-color: rgb(219, 224, 224);
-    box-shadow: 2rem 2rem 50rem gray;
+    box-shadow: 2rem 2rem 50rem rgb(136, 135, 135);
     overflow: scroll;
     h2{
         padding: 2rem;
